--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--<group android:checkableBehavior="single">
+    <group android:checkableBehavior="single">
         <item
             android:id="@+id/home"
             android:icon="@drawable/ic_home"
@@ -22,11 +22,11 @@
             android:icon="@drawable/ic_instagram"
             android:title="Instagram" />
 
-    </group>-->
+    </group>
 
     <group android:checkableBehavior="single">
 
-        <item android:title="Settings">
+        <item android:title="Communicate">
         <menu>
 
         <item
