Refactored File Structures To com.devlan.wcf

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
     android:orientation="vertical"
-    tools:context="com.andromob.androlite.activity.MainActivity">
+    tools:context="com.devlan.wcf.activity.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
