--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="#ffffff"
     android:id="@+id/splash"
-    tools:context="com.devlan.wcf.activity.SplashActivity">
+    tools:context="com.devlan.wcf.inc.devlan.wcf.activity.SplashActivity">
 
 
     <ImageView
