--- a/app/src/main/res/layout/activity_client_login.xml
+++ b/app/src/main/res/layout/activity_client_login.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ClientLogin">
 
     <WebView
-        android:id="@+id/DocLogIn"
+        android:id="@+id/ClientLogin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="194dp"
@@ -17,6 +17,5 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
