--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8b2202</color>
-    <color name="colorPrimaryDark">#741F00</color>
-    <color name="colorAccent">#8B2202</color>
-    <color name="white">#FFFFFF</color>
-    <color name="bg">#F6F7F8</color>
-    <color name="black">#000000</color>
-    <color name="about_us_Text">#000000</color>
-    <color name="offwhite">#C3E4E4E4</color>
+    <color name="colorPrimary">#E9EAEF</color>
+    <color name="colorPrimaryDark">#3F51B5</color>
+    <color name="colorAccent">#349E38</color>
 </resources>
