--- a/app/src/main/res/layout-v16/activity_splash.xml
+++ b/app/src/main/res/layout-v16/activity_splash.xml
@@ -10,8 +10,7 @@
         android:id="@+id/logo"
         android:layout_width="457dp"
         android:layout_height="673dp"
-        android:contentDescription="@string/todo"
-        android:src="@drawable/smart"
+        android:src="@drawable/splash_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.869"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,7 +22,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/powered_by_martdevelopers_inc"
+        android:text="@string/a_devlan_inc_production"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
