--- a/app/src/main/res/layout-v16/activity_splash.xml
+++ b/app/src/main/res/layout-v16/activity_splash.xml
@@ -12,16 +12,17 @@
         android:layout_height="673dp"
         android:src="@drawable/splash_logo"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.869"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.034" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/athena"
         android:text="@string/a_devlan_inc_production"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
