--- a/app/src/main/res/layout-v16/activity_splash.xml
+++ b/app/src/main/res/layout-v16/activity_splash.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="430dp"
+        android:layout_width="400dp"
         android:layout_height="673dp"
         android:src="@drawable/splashscreen"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,7 +17,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/textView"
@@ -26,6 +27,7 @@
         android:fontFamily="@font/athena"
         android:text="@string/a_devlan_inc_production"
         android:textColor="@color/colorAccent"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
