Loaded Diffrent Fonts

--- a/app/src/main/res/layout-v16/activity_splash.xml
+++ b/app/src/main/res/layout-v16/activity_splash.xml
@@ -24,10 +24,11 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/athena"
+        android:textStyle="bold"
+        android:fontFamily="@font/longshort"
         android:text="@string/a_devlan_inc_production"
         android:textColor="@color/colorAccent"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
