--- a/app/src/main/res/layout-v16/activity_splash.xml
+++ b/app/src/main/res/layout-v16/activity_splash.xml
@@ -9,23 +9,22 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="400dp"
-        android:layout_height="673dp"
+        android:layout_width="380dp"
+        android:layout_height="600dp"
         android:src="@drawable/splashscreen"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        android:contentDescription="TODO" />
+        app:layout_constraintVertical_bias="0.275" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:fontFamily="@font/longshort"
+        android:fontFamily="@font/sportsjersey"
         android:text="@string/a_devlan_inc_production"
         android:textColor="@color/colorAccent"
         android:textSize="30sp"
